# Wedding_bot

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml
bot/: main.py  messages.py  weather_utils.py
bot/helpers/: stickers_id.py
